Add CI deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,11 @@ jobs:
         with:
           distribution: temurin
           java-version: "25"
-          cache: maven
+          cache: gradle
 
-      - name: Build
-        run: mvn -DskipTests clean package
+      # Jeśli masz wrappera (gradlew) — super, używamy go.
+      - name: Build (Gradle)
+        run: ./gradlew clean build -x test
 
       - name: Upload jar to server (temp)
         uses: appleboy/scp-action@v0.1.7
@@ -27,9 +28,9 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "target/*.jar"
+          source: "build/libs/*.jar"
           target: "/opt/apps/myapi/"
-          strip_components: 1
+          strip_components: 2
 
       - name: Switch jar atomically + restart
         uses: appleboy/ssh-action@v1.0.3
@@ -41,7 +42,10 @@ jobs:
             set -euo pipefail
             cd /opt/apps/myapi
 
-            NEW_JAR="$(ls -1 *.jar | head -n 1)"
+            # uwaga: build/libs często generuje też *-plain.jar itp.
+            # bierzemy najnowszy JAR i ignorujemy "plain"
+            NEW_JAR="$(ls -1t *.jar | grep -v -- '-plain\.jar$' | head -n 1)"
+
             mv -f "$NEW_JAR" myapi.jar.new
 
             if [ -f myapi.jar ]; then
