--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     url: ${DB_URL:jdbc:postgresql://127.0.0.1:5432/myapi}
-    username: ${DB_USER:myapi}
-    password: ${DB_PASSWORD:myapi}
+    username: ${DB_USER:postgres}
+    password: ${DB_PASSWORD:postgres}
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,10 +15,14 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,mappings
 
 app:
   jwt:
-    secret: ${JWT_SECRET:#~?Xb-:ga7H2SFCG4]UA(Y?]f8XN]~M4&}Eg,_i[j}575};29uqgp-tMB:C}F,68}
+    secret: "${JWT_SECRET:#~?Xb-:ga7H2SFCG4]UA(Y?]f8XN]~M4&}Eg,_i[j}575};29uqgp-tMB:C}F,68}"
     accessTtlMinutes: ${JWT_ACCESS_TTL_MIN:15}
     refreshTtlDays: ${JWT_REFRESH_TTL_DAYS:14}
+
+  passwordReset:
+    ttlMinutes: ${PASSWORD_RESET_TTL_MIN:15}
+    linkBase: "http://localhost:3000/reset-password?token="
