--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
     password: ${MAIL_PASSWORD}
     default-encoding: UTF-8
     properties:
+      mail.debug: true
       mail.smtp.auth: false
       mail.smtp.starttls.enable: false
       mail.smtp.connectiontimeout: 5000
