--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
     url: ${DB_URL:jdbc:postgresql://127.0.0.1:5432/myapi}
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:postgres}
-
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   jpa:
     hibernate:
       ddl-auto: update
